--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style/index.css">
 </head>
 <body>
-    
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Dignissimos error provident laborum reiciendis voluptatem molestias ullam neque, aperiam sequi iure molestiae asperiores. Distinctio autem adipisci maxime, a placeat harum molestiae!
+    </p>
 </body>
 </html>
