--- a/index.html
+++ b/index.html
@@ -14,26 +14,28 @@
             rel="stylesheet">
     </head>
     <body>
-        <nav>
-            <a href="#" id="logo">
-                <img src="assets/Logo.svg" alt="Logomarca">
-            </a>
+        <div class="bg-surface-color">
+            <nav class="container">
+                <a href="#" id="logo">
+                    <img src="assets/Logo.svg" alt="Logomarca">
+                </a>
 
-            <ul id="primary-menu">
-                <li>
-                    <a href="#">
-                        <img src="assets/icons/MagnifyingGlass.svg"
-                            alt="Pesquisar">
-                    </a>
-                </li>
-                <li><a href="#">Explorer</a></li>
-                <li><a href="#">Minhas viagens</a></li>
-                <li>
-                    <a href="#">
-                        <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
-                    </a></li>
-            </ul>
-        </nav>
+                <ul id="primary-menu">
+                    <li>
+                        <a href="#">
+                            <img src="assets/icons/MagnifyingGlass.svg"
+                                alt="Pesquisar">
+                        </a>
+                    </li>
+                    <li><a href="#">Explorer</a></li>
+                    <li><a href="#">Minhas viagens</a></li>
+                    <li>
+                        <a href="#">
+                            <img src="assets/Profile pic.png" alt="Imagem de Isabela Torres">
+                        </a></li>
+                </ul>
+            </nav>
+        </div>
         <header>
 
         </header>
